# AUTh-hosa-voice

./: README.md  pyproject.toml
hosa_voice/: __init__.py  voice_classifier.py  voice_datasets.py
scripts/: a.ipynb
v2/: b.ipynb  c.ipynb  voice_classifier.py  voice_datasets.py
