[tool.poetry]
name = "hosa-voice"
version = "0.1.0"
description = ""
authors = [
    "Mariano Ntrougkas <44480600+marios1861@users.noreply.github.com>",
    "Matina Lampaki <name@email.com>",
    "Dimitra Kyrgiafini <name@email.com>",
    "Ioannis Georgoulias <name@email.com>",
    "Dimitris Sourlatzis <name@email.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.1"
torchvision = "^0.15.2"
lightning = "^2.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
