[tool.poetry]
name = "hosa-voice"
version = "0.1.0"
description = ""
authors = [
    "Mariano Ntrougkas <44480600+marios1861@users.noreply.github.com>",
    "Matina Lampaki <88787230+0matls@users.noreply.github.com>",
    "Dimitra Kyrgiafini <47788488+kyrgiafinid@users.noreply.github.com>",
    "Ioannis Georgoulias <122558672+Wreckord@users.noreply.github.com>",
    "Dimitris Sourlatzis <51090334+Sourland@users.noreply.github.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.1"
torchvision = "^0.15.2"
lightning = "^2.0.8"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
